# translate

./: .env.example  .gitignore  Cargo.toml  build.rs  delete.sh
.github/: README.md
src/: lib.rs  main.rs  translate_text.rs
